--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,21 @@
-body { font-family: Arial, Helvetica, sans-serif; }
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 10px; padding: 0; }
 
 /* Layers */
-.layerContainer { position: relative; padding: 0; }
-.imageLayer { position: absolute; }
+.layerContainer { 
+    position: relative; padding: 0;
+    margin: auto; text-align: center; }
+.imageLayer { 
+    position: absolute;
+    left: 0px; }
 .drawDiv { position: absolute; pointer-events: none; }
-.dropBox { border: 5px dashed #ccc; }
+.dropBox { 
+    border: 5px dashed #ccc;
+    margin: 20px auto; }
 .dropBox.hover { border: 5px dashed #cc0; }
+
+.inline { display: inline-block !important; }
 
 /* Info */
 .info { color: #cde; text-shadow: 1px 1px #000; font-size: 80%; }
