--- a/css/style.css
+++ b/css/style.css
@@ -16,10 +16,14 @@ body {
     position: absolute;
     left: 0px; }
 .drawDiv { position: absolute; pointer-events: none; }
-.dropBox {
-    border: 5px dashed #ccc;
-    margin: 20px auto; }
-.dropBox.hover { border: 5px dashed #cc0; }
+
+.dropBox {}
+.dropBoxBorder {
+    margin: 20px auto;
+    border: 5px dashed #ccc; }
+.dropBoxBorder.hover {
+    margin: 20px auto;
+    border: 5px dashed #cc0; }
 
 .inline { display: inline-block !important; }
 
