--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,14 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 10px; padding: 0; }
 
-#pageMain { height: 82vh; }
+#pageMain {
+    height: 82vh;
+    padding: 2px;
+}
+
+#pageFooter {
+    height: 49px;
+}
 
 /* Layers */
 .layerContainer {
