--- a/css/style.css
+++ b/css/style.css
@@ -12,14 +12,20 @@ body {
 #pageMain {
   height: 82vh;
   padding: 2px;
+  overflow: hidden;
+}
+
+#dwv {
+  height: 90%;
 }
 
 /* Layers */
-.layerContainer {
+#layerGroup {
   position: relative;
   padding: 0;
-  margin: auto;
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  height: 100%;
 }
 .layer {
   position: absolute;
@@ -44,19 +50,18 @@ body {
 }
 
 /* Info */
-.infoLayer {
+#infoLayer {
   position: absolute;
   pointer-events: none;
   z-index: 20;
-  width: 100%;
   height: 100%;
 }
-.infoLayer ul {
+#infoLayer ul {
   margin: 0;
   padding: 2px;
   list-style-type: none;
 }
-.infoLayer li {
+#infoLayer li {
   margin-top: 0;
 }
 .info {
@@ -120,7 +125,7 @@ body {
   text-align: right;
 }
 
-.infoLayer canvas {
+#infoLayer canvas {
   margin: 0;
   padding: 2px;
 }
