--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@ body {
   pointer-events: none;
 }
 
+/* drag&drop */
 .dropBox {
   text-align: center;
   width: 50%; height: 75%;
@@ -54,6 +55,7 @@ body {
   position: absolute;
   pointer-events: none;
   z-index: 20;
+  width: 100%;
   height: 100%;
 }
 #infoLayer ul {
@@ -63,6 +65,10 @@ body {
 }
 #infoLayer li {
   margin-top: 0;
+}
+#infoLayer canvas {
+  margin: 0;
+  padding: 2px;
 }
 .info {
   color: #cde;
@@ -125,19 +131,13 @@ body {
   text-align: right;
 }
 
-#infoLayer canvas {
-  margin: 0;
-  padding: 2px;
-}
-
-.plot {
+#plot {
   position: absolute;
   width: 100px;
   height: 50px;
   bottom: 15px;
   right: 0;
 }
-
 
 /* Tag list */
 table.tagsTable {
