--- a/css/style.css
+++ b/css/style.css
@@ -165,3 +165,15 @@ table.drawsTable thead th {
 .tags form {
   width: 50%;
 }
+
+.text-button {
+  font-size: 200%;
+  padding-right: 10px;
+  cursor: pointer;
+}
+.checked {
+  color: cornflowerblue;
+}
+.unchecked {
+  color: grey;
+}
